Actions
Bug #14259
closed<sys/elf.h> is missing STB_LOOS/STB_HIOS
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
We should have STB_LOOS/STB_HIOS in sys/elf.h for completeness and correctness
Updated by Electric Monk 6 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit ee57561bf1f188f8f5f7070bc7fb2d1d1f928a7c
commit ee57561bf1f188f8f5f7070bc7fb2d1d1f928a7c Author: Richard Lowe <richlowe@richlowe.net> Date: 2021-11-23T21:45:11.000Z 14259 <sys/elf.h> is missing STB_LOOS/STB_HIOS Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Yuri Pankov <ypankov@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions