14259 <sys/elf.h> is missing STB_LOOS/STB_HIOS Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Yuri Pankov <ypankov@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>